--- a/themes/hugo_theme_robust/layouts/_default/single.html
+++ b/themes/hugo_theme_robust/layouts/_default/single.html
@@ -8,17 +8,27 @@
 
         <meta itemprop="mainEntityOfPage"  itemType="https://schema.org/WebPage" content="{{ .Site.BaseURL }}"/>
         <meta itemprop="dateModified" content="{{ .Date.Format "2006-01-02T15:04:05-07:00" }}">
-        <meta itemprop="headline" content="{{ .Title }}">
-        <meta itemprop="description" content="{{ .Summary }}">
+        <meta itemprop="headline" content="{{ .Title }}"/>
+        <meta itemprop="description" property="og:description" content="{{ .Summary }}"/>
         <meta itemprop="url" content="{{ .Permalink }}">
+
+
+        <meta property="og:image" content="{{ $.Site.BaseURL }}images/{{ with .Params.image }}{{ . }}{{ else }}default.jpg{{ end }}" />
+        <meta property="og:image:secure_url" content="{{ $.Site.BaseURL }}images/{{ with .Params.image }}{{ . }}{{ else }}default.jpg{{ end }}" />
+        <meta property="og:image:type" content="image/jpeg" />
+        <meta property="og:image:width" content="400" />
+        <meta property="og:image:height" content="300" />
+        <meta property="og:image:alt" content="{{ .Title }}" />
         <div itemprop="image" itemscope itemtype="https://schema.org/ImageObject">
           <meta itemprop="url" content="{{ $.Site.BaseURL }}images/{{ with .Params.image }}{{ . }}{{ else }}default.jpg{{ end }}" />
           <meta itemprop="width" content="800">
           <meta itemprop="height" content="800">
         </div>
+        <meta property="og:locale" content="{{ $.Page.Lang }}" />
+        
         <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
           <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
-            <meta itemprop="url" content="{{ .Site.BaseURL }}images/logo.jpg">
+            <meta itemprop="url" content="{{ .Site.BaseURL }}images/default.jpg">
             <meta itemprop="width" content="100">
             <meta itemprop="height" content="100">
           </div>
