--- a/themes/hugo_robust/layouts/partials/sidebar.html
+++ b/themes/hugo_robust/layouts/partials/sidebar.html
@@ -2,7 +2,7 @@
 
   <div class="sections sidebar">
     <section class="sidebar">
-      <header>LATESTS</header>
+      <header>{{ i18n "latestPosts" }}</header>
       <div>
         <div class="articles sm">
           {{ range $i, $p := (first 10 .Site.Pages) }}
