--- a/themes/hugo_robust/layouts/_default/baseof.html
+++ b/themes/hugo_robust/layouts/_default/baseof.html
@@ -14,7 +14,7 @@
     <style>
       {{ replaceRE " +" " " (replaceRE "\n" "" (partial "styles.css" .)) | safeCSS }}
       {{ with .Site.Params.fontfamily }} body { font-family: {{ . | safeCSS }}; } {{ end }}
-      {{ with .Site.Params.logofontfamily }} .h-logo { font-family: {{ . | safeCSS }}; } {{ end }}
+      {{ with .Site.Params.logofontfamily }} .logo a { font-family: {{ . | safeCSS }}; } {{ end }}
     </style>
 
     <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/flags16.css"/>
