Translate welcome article to FR + fix few sentences in ES

--- a/themes/hugo_robust/layouts/partials/styles.css
+++ b/themes/hugo_robust/layouts/partials/styles.css
@@ -419,7 +419,7 @@ article.sn > .article-body figure amp-img {
 }
 
 article.sn > .article-body figcaption {
-  color: #cfd8dc;
+  color: #69b6fb;
   font-size: .8rem;
   font-weight: 700;
   margin-top: .5rem;
