Try to fix flags

--- a/themes/hugo_robust/layouts/_default/baseof.html
+++ b/themes/hugo_robust/layouts/_default/baseof.html
@@ -17,7 +17,7 @@
       {{ with .Site.Params.logofontfamily }} .logo a { font-family: {{ . | safeCSS }}; } {{ end }}
     </style>
 
-    <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/flags16.css"/>
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/flags16.css"/>
   </head>
 
   <body>
