Add link to itinerary in sri lanka article & change url

--- a/themes/hugo_robust/layouts/_default/baseof.html
+++ b/themes/hugo_robust/layouts/_default/baseof.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/solarized_dark.min.css">
     <title>{{ block "title" . }}{{ end }}{{ .Site.Title }}</title>
     {{ block "meta" . }}{{ end }}
+    
+    <link rel="stylesheet" href="/css/flags16.css"/>
     <style>
       {{ replaceRE " +" " " (replaceRE "\n" "" (partial "styles.css" .)) | safeCSS }}
       {{ with .Site.Params.fontfamily }} body { font-family: {{ . | safeCSS }}; } {{ end }}
       {{ with .Site.Params.logofontfamily }} .logo a { font-family: {{ . | safeCSS }}; } {{ end }}
     </style>
-
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/flags16.css"/>
   </head>
 
   <body>
