--- a/themes/hugo_robust/layouts/_default/single.html
+++ b/themes/hugo_robust/layouts/_default/single.html
@@ -31,6 +31,19 @@
       </div>
     </div>
 
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/{{ i18n "facebookLocaleCode" }}/sdk.js#xfbml=1&version=v2.10&appId=541227622879810";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+
+      <div class="fb-like" data-href="{{ .Permalink | safeURL }}" data-layout="button" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+      <div class="fb-follow" data-href="https://www.facebook.com/Traveling-Bubbles-263380677505386/" data-layout="standard" data-size="large" data-show-faces="true"></div>
+
+
     {{ template "_internal/disqus.html" . }}
     <script type="text/javascript">
       var disqus_config = function () { 
