Make fb subscribe smaller

--- a/themes/hugo_robust/layouts/_default/single.html
+++ b/themes/hugo_robust/layouts/_default/single.html
@@ -41,7 +41,7 @@
     }(document, 'script', 'facebook-jssdk'));</script>
 
       <div class="fb-like" data-href="{{ .Permalink | safeURL }}" data-layout="button" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
-      <div class="fb-follow" data-href="https://www.facebook.com/Traveling-Bubbles-263380677505386/" data-layout="standard" data-size="large" data-show-faces="true"></div>
+      <div class="fb-follow" data-href="https://www.facebook.com/Traveling-Bubbles-263380677505386/" data-width="310" data-layout="standard" data-size="large" data-show-faces="true"></div>
 
 
     {{ template "_internal/disqus.html" . }}
