--- a/themes/hugo_robust/layouts/_default/baseof.html
+++ b/themes/hugo_robust/layouts/_default/baseof.html
@@ -52,6 +52,9 @@
       </div>
     </footer>
 
+    <script>var global = { languageCode  : {{ $.Page.Lang }} }</script>
+    <script src="/js/aws-sdk-2.108.0.min.js" async></script>
+    <script src="/js/aws-lambda.js" async></script>
   </body>
 </html>
 
