--- a/themes/hugo_robust/static/css/custom.css
+++ b/themes/hugo_robust/static/css/custom.css
@@ -6,31 +6,28 @@ div.fb-like{
 .subscribe p{
   font-size:13px;
   color:#6E6E6E;
-  margin-bottom:30px;
+  margin-bottom:0.5rem;
 }
 
-.subscribe input[type="email"]{
+.subscribe input[type="email"], .subscribe input[type="text"]{
   width:98%;
   padding:15px 0px 15px 8px;
-  border-radius:5px;
-  box-shadow:inset 4px 6px 10px -4px rgba(0,0,0,0.3), 0 1px 1px -1px rgba(255,255,255,0.3);
-	background:rgba(0,0,0,0.2);
+  box-shadow:inset 4px 6px 10px -4px rgba(0,0,0,0.2), 0 1px 1px -1px rgba(255,255,255,0.2);
+	background:rgba(0,0,0,0.1);
   @include disable;
-  border:1px solid rgba(0,0,0,1);
   margin-bottom:10px;
   color:#6E6E6E;
 }
 
 .subscribe input[type="submit"]{
-  width:100%;
-  padding:15px;
+  width:101%;
+  padding:15px 0px 15px 8px;
   @include disable;
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#28D2DE), to(#1A878F));
   background-image: -webkit-linear-gradient(#28D2DE 0%, #1A878F 100%);
   background-image: -moz-linear-gradient(#28D2DE 0%, #1A878F 100%);
   background-image: -o-linear-gradient(#28D2DE 0%, #1A878F 100%);
   background-image: linear-gradient(#28D2DE 0%, #1A878F 100%);
-  font:14px Oswald;
   color:#FFF;
   text-transform:uppercase;
   opacity:0.7;
@@ -43,7 +40,7 @@ div.fb-like{
 
 .subscribe input:focus{
   box-shadow:inset 4px 6px 10px -4px rgba(0,0,0,0.7), 0 1px 1px -1px rgba(255,255,255,0.3);
-  background:rgba(0,0,0,0.3);
+  background:rgba(0,0,0,0.2);
   @include easeme;
 }
 
@@ -52,7 +49,7 @@ div.fb-like{
   cursor:pointer;
 }
 
-.subscribe .email-help{
+.subscribe .helper, .subscribe .helper{
   display:none;
   padding:0px;
   margin:0px 0px 15px 0px;
