--- a/themes/hugo_robust/static/css/custom.css
+++ b/themes/hugo_robust/static/css/custom.css
@@ -22,19 +22,9 @@ div.fb-like{
   width:101%;
   padding:15px 0px 15px 8px;
   @include disable;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#28D2DE), to(#1A878F));
-  background-image: -webkit-linear-gradient(#28D2DE 0%, #1A878F 100%);
-  background-image: -moz-linear-gradient(#28D2DE 0%, #1A878F 100%);
-  background-image: -o-linear-gradient(#28D2DE 0%, #1A878F 100%);
-  background-image: linear-gradient(#28D2DE 0%, #1A878F 100%);
+  background-color: #4267b2; 
   color:#FFF;
   text-transform:uppercase;
-  opacity:0.7;
-	-webkit-box-shadow: 0 8px 6px -6px rgba(0,0,0,0.7);
-  -moz-box-shadow: 0 8px 6px -6px rgba(0,0,0,0.7);
-	box-shadow: 0 8px 6px -6px rgba(0,0,0,0.7);
-  border-top:1px solid rgba(255,255,255,0.8)!important;
-  -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.2)));
 }
 
 .subscribe input:focus{
