--- a/themes/hugo_robust/layouts/shortcodes/img.html
+++ b/themes/hugo_robust/layouts/shortcodes/img.html
@@ -1,5 +1,5 @@
 <figure{{ if .Get "class" }} class="{{ .Get "class" }}"{{ end }}>
-  <img src="{{ $.Site.BaseURL }}{{ .Get "src" }}" alt="{{ .Get "caption" }}">
+  <img src="{{ $.Site.BaseURL }}{{ .Get "src" }}" alt="{{ .Get "caption" }}" {{ if .Get "width"}} width="{{ .Get "width" }}" {{ end }} {{ if .Get "height"}} height="{{ .Get "height" }}" {{ end }}>
   {{ if .Get "caption" }}
   <figcaption>
     {{ if .Get "href" }}
