--- a/themes/hugo_robust/layouts/partials/styles.css
+++ b/themes/hugo_robust/layouts/partials/styles.css
@@ -67,7 +67,11 @@ aside {
   display: block;
 }
 
-main { padding: 1rem 0 3rem 0; }
+main {
+  padding: 1rem 0 3rem 0;
+  margin-top: 4rem; 
+}
+
 aside.h { padding: 3rem 0; }
 
 main.f,
@@ -93,6 +97,10 @@ aside.f {
   box-shadow: 0 0 0 1px rgba(63,63,68,.05), 0 1px 3px rgba(63,63,68,.1), 0 1px 2px rgba(0,0,0,.05);
   padding: 1rem 0;
   text-align: center;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 99;
 }
 
 .l-footer {
@@ -106,6 +114,16 @@ aside.f {
 @media (max-width: 768px) {
   .l-sidebar {
     margin-top: 4rem;
+  }
+}
+
+
+@media (min-width: 768px){
+  .fixed-right-tmp{
+    position: fixed;
+    top: 4rem;
+    right: 0px;
+    margin: auto;
   }
 }
 
