--- a/themes/hugo_robust/layouts/partials/single_meta.html
+++ b/themes/hugo_robust/layouts/partials/single_meta.html
@@ -6,7 +6,12 @@
 <meta property="og:image" content="{{ .Site.BaseURL }}{{ .Params.thumbnail | default "images/default.png" }}">
 <meta property="og:site_name" content="{{ .Site.Title }}">
 <meta property="og:description" content="{{ replaceRE "\n" "" (.Description | default .Summary) }}">
-<meta property="og:locale" content="ja_JP">
+<meta property="og:locale" content="{{ i18n "facebookLocaleCode" }}">
+{{ if $.Page.IsTranslated }}
+	{{ range $.Page.Translations }}
+		<meta property="og:locale:alternate" content="{{ i18n ( printf  "%sLocaleCode" .Lang ) }}"/>
+    {{ end}}
+{{ end }}
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="{{ .Site.Title }}">
