Fix DEADLY ISSUE OF THE DEADS !!!!!!

--- a/themes/hugo_robust/layouts/partials/single_meta.html
+++ b/themes/hugo_robust/layouts/partials/single_meta.html
@@ -19,5 +19,5 @@
 <meta name="twitter:title" content="{{ .Title }} - {{ .Site.Title }}">
 <meta name="twitter:description" content="{{ replaceRE "\n" "" (.Description | default .Summary) }}">
 <meta name="twitter:image" content="{{ .Site.BaseURL }}{{ .Params.thumbnail | default "images/default.png" }}">
-<meta name="fb:app_id" content="541227622879810" }}">
+<meta name="fb:app_id" content="541227622879810">
 
