Improve small design in articles head for mobiles.

--- a/themes/hugo_robust/layouts/partials/styles.css
+++ b/themes/hugo_robust/layouts/partials/styles.css
@@ -297,6 +297,7 @@ article.sn > .article-body {
   article.sn > .article-body,
   article.sn .article-footer {
     padding: 1rem;
+    padding-bottom: 0;
   }
 
   article.sn > .article-body {
