--- a/themes/hugo_robust/layouts/_default/baseof.html
+++ b/themes/hugo_robust/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ .Lang }}">
   <head>
     {{ partial "meta.html" . }}
     {{ with .Site.Params.googlefonts }}
