Improve subscribe form: add success message & rename js file.

--- a/themes/hugo_robust/layouts/_default/baseof.html
+++ b/themes/hugo_robust/layouts/_default/baseof.html
@@ -54,7 +54,7 @@
 
     <script>var global = { languageCode  : {{ $.Page.Lang }} }</script>
     <script src="/js/aws-sdk-2.108.0.min.js" async></script>
-    <script src="/js/aws-lambda.js" async></script>
+    <script src="/js/subscribe.js" async></script>
   </body>
 </html>
 
