--- a/themes/hugo_robust/layouts/partials/sidebar.html
+++ b/themes/hugo_robust/layouts/partials/sidebar.html
@@ -45,6 +45,14 @@
           <input type="email" class="email" placeholder="{{ i18n "email" }}" title="{{ i18n "emailHelp" }}" required>
           <input type="submit" class="submit" value="{{ i18n "register" }}">
         </form>
+        <div class="spinner" hidden="true">
+          <div class="bounce1"></div>
+          <div class="bounce2"></div>
+          <div class="bounce3"></div>
+        </div>
+        <div class="success" hidden="true">
+          <p>You are successfully subscribed to the newsletter!</p>
+        </div>
       </div>
     </section>
 
