--- a/themes/hugo_robust/static/css/custom.css
+++ b/themes/hugo_robust/static/css/custom.css
@@ -6,6 +6,10 @@ div.fb-like{
 	padding: 4px 4px 4px 0px;
 }
 
+.subscribe {
+  position: relative;
+}
+
 .subscribe p{
   font-size:13px;
   color:#6E6E6E;
@@ -31,6 +35,10 @@ div.fb-like{
   text-transform:uppercase;
 }
 
+.subscribe input[type="submit"]:disabled{
+  background-color: #aaaaaa; 
+}
+
 .subscribe input:focus{
   box-shadow:inset 4px 6px 10px -4px rgba(0,0,0,0.7), 0 1px 1px -1px rgba(255,255,255,0.3);
   background:rgba(0,0,0,0.2);
@@ -46,4 +54,53 @@ div.fb-like{
   display:none;
   padding:0px;
   margin:0px 0px 15px 0px;
+}
+
+.spinner {
+  width: 105%;
+  height: 105%;
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  background: rgba(214, 214, 214, 0.65);
+  text-align: center;
+}
+
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #333;
+
+  top: 100px;
+  position: relative;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% { 
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
 }
