Add robots.txt & allow bing search engine

--- a/themes/hugo_robust/layouts/partials/meta.html
+++ b/themes/hugo_robust/layouts/partials/meta.html
@@ -19,3 +19,4 @@
 {{ end }}
 
 <meta property="fb:app_id" content="541227622879810">
+<meta name="msvalidate.01" content="993DDA3A8883B534F0D3F2157FCAAE48" />
