Add yandex searchengine check

--- a/themes/hugo_robust/layouts/partials/meta.html
+++ b/themes/hugo_robust/layouts/partials/meta.html
@@ -20,3 +20,4 @@
 
 <meta property="fb:app_id" content="541227622879810">
 <meta name="msvalidate.01" content="993DDA3A8883B534F0D3F2157FCAAE48" />
+<meta name="yandex-verification" content="687f6798de1172b8" />
