Center text below images

--- a/themes/hugo_robust/layouts/partials/styles.css
+++ b/themes/hugo_robust/layouts/partials/styles.css
@@ -444,6 +444,7 @@ article.sn > .article-body figcaption {
   font-size: .8rem;
   font-weight: 700;
   margin-top: .5rem;
+  text-align: center;
 }
 
 .facts li {
