--- a/themes/hugo_robust/layouts/partials/meta.html
+++ b/themes/hugo_robust/layouts/partials/meta.html
@@ -5,6 +5,10 @@
 {{ with .Site.Params.contact }}<meta name="contact" content="{{ . }}">{{ end }}
 {{ .Hugo.Generator }}
 
+{{ if .Keywords }}
+<meta content="{{ delimit .Keywords ", " }}" name="keywords">
+{{ end }}
+
 <link rel="apple-touch-icon" href="{{ .Site.BaseURL }}images/logo.png">
 {{ if .RSSLink }}
   <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
