Fix hreflang for homepage

--- a/themes/hugo_robust/layouts/partials/meta.html
+++ b/themes/hugo_robust/layouts/partials/meta.html
@@ -21,7 +21,13 @@
 {{ if $.Page.IsTranslated }}
 	{{ range $.Page.Translations }}
 		<meta property="og:locale:alternate" content="{{ i18n ( printf  "%sLocaleCode" .Lang ) }}"/>
+
+
+      {{ if ne .Title $.Site.Title }}
 		<link rel="alternate" hreflang="{{ .Lang }}" href="{{ .Permalink }}" />
+	  {{ else }}
+		<link rel="alternate" hreflang="{{ .Lang }}" href="{{ .Site.BaseURL }}{{ .Lang }}" />
+	  {{ end }}
     {{ end}}
 {{ end }}
 
