--- a/themes/hugo_robust/layouts/_default/baseof.amp.html
+++ b/themes/hugo_robust/layouts/_default/baseof.amp.html
@@ -14,6 +14,9 @@
     {{ end }}
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <title>{{ block "title" . }}{{ end }}{{ .Site.Title }}</title>
+
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.jpg"/>
+    
     {{ block "meta" . }}{{ end }}
     <style amp-custom>
       {{ replaceRE " +" " " (replaceRE "\n" "" (partial "styles.css" .)) | safeCSS }}
