--- a/themes/hugo_robust/layouts/_default/baseof.html
+++ b/themes/hugo_robust/layouts/_default/baseof.html
@@ -15,9 +15,9 @@
     <link rel="shortcut icon" type="image/png" href="/images/favicon.jpg"/>
     
     <link rel="stylesheet" type="text/css" href="/css/flags16.css" media="screen"/>
-    <link rel="stylesheet" type="text/css" href="/css/custom.css"/ media="screen">
     <style>
       {{ replaceRE " +" " " (replaceRE "\n" "" (partial "styles.css" .)) | safeCSS }}
+      {{ replaceRE " +" " " (replaceRE "\n" "" (partial "custom.css" .)) | safeCSS }}
       {{ with .Site.Params.fontfamily }} body { font-family: {{ . | safeCSS }}; } {{ end }}
       {{ with .Site.Params.logofontfamily }} .logo a { font-family: {{ . | safeCSS }}; } {{ end }}
     </style>
