Connect to fb instant article

--- a/themes/hugo_robust/layouts/partials/meta.html
+++ b/themes/hugo_robust/layouts/partials/meta.html
@@ -2,6 +2,7 @@
 <meta name="pinterest" content="nopin">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <meta name="theme-color" content="#263238">
+<meta property="fb:pages" content="263380677505386" />
 {{ with .Site.Params.contact }}<meta name="contact" content="{{ . }}">{{ end }}
 {{ .Hugo.Generator }}
 
