Fix case issue for variable

--- a/themes/hugo_robust/layouts/partials/meta.html
+++ b/themes/hugo_robust/layouts/partials/meta.html
@@ -2,8 +2,9 @@
 <meta name="pinterest" content="nopin">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <meta name="theme-color" content="#263238">
+<meta name="language" content="fr-FR">
 
-<meta property="og:url" content="{{ .Site.baseURL }}">
+<meta property="og:url" content="{{ .Site.BaseURL }}">
 <meta property="og:title" content="{{ .Site.Title }}">
 <meta property="og:site_name" content="traveling-bubbles.com">
 <meta property="og:type" content="website">
