--- a/themes/hugo_robust/layouts/partials/meta.html
+++ b/themes/hugo_robust/layouts/partials/meta.html
@@ -4,7 +4,7 @@
 <meta name="theme-color" content="#263238">
 <meta name="language" content="fr-FR">
 
-<meta property="og:url" content="{{ .Site.BaseURL }}">
+<meta property="og:url" content="{{ .Permalink }}">
 <meta property="og:title" content="{{ .Site.Title }}">
 <meta property="og:site_name" content="traveling-bubbles.com">
 <meta property="og:type" content="website">
