--- a/themes/hugo_robust/layouts/partials/meta.html
+++ b/themes/hugo_robust/layouts/partials/meta.html
@@ -1,40 +1,71 @@
+
+<!-- Global meta properties -->
 <meta charset="utf-8">
-<meta name="pinterest" content="nopin">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <meta name="theme-color" content="#263238">
-<meta name="language" content="fr-FR">
 
-<meta property="og:url" content="{{ .Permalink }}">
-<meta property="og:title" content="{{ .Site.Title }}">
 <meta property="og:site_name" content="traveling-bubbles.com">
-<meta property="og:type" content="website">
+<meta property="og:image" content="{{ .Site.BaseURL }}{{ .Params.thumbnail | default "images/default.png" }}">
+<meta property="og:site_name" content="{{ .Site.Title }}">
+
+<meta name="language" content="{{ i18n "facebookLocaleCode" }}">
+<meta property="og:locale" content="{{ i18n "facebookLocaleCode" }}">
+
+<link rel="apple-touch-icon" href="{{ .Site.BaseURL }}images/logo.png">
+
 <meta property="fb:pages" content="263380677505386">
 <meta property="fb:pages" content="263380677505386" />
-{{ with .Site.Params.contact }}<meta name="contact" content="{{ . }}">{{ end }}
-{{ .Hugo.Generator }}
+<meta property="fb:app_id" content="541227622879810">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="{{ .Site.Title }}">
+<meta name="twitter:image" content="{{ .Site.BaseURL }}{{ .Params.thumbnail | default "images/default.png" }}">
+
+<meta name="pinterest" content="nopin">
 
 {{ if .Keywords }}
 <meta content="{{ delimit .Keywords ", " }}" name="keywords">
 {{ end }}
+{{ with .Site.Params.contact }}<meta name="contact" content="{{ . }}">{{ end }}
 
-<link rel="apple-touch-icon" href="{{ .Site.BaseURL }}images/logo.png">
+
+{{ if ne .Title $.Site.Title }}
+	<!-- Article specific properties -->
+	<meta property="og:title" content="{{ .Title }} - {{ .Site.Title }}">
+	<meta property="og:type" content="article">
+	<meta property="og:description" content="{{ replaceRE "\n" "" (.Description | default .Summary) }}">
+	<meta property="og:url" content="{{ .Permalink }}">
+	<link rel="canonical" href="{{ .Permalink }}">
+
+	<meta name="twitter:title" content="{{ .Title }} - {{ .Site.Title }}">
+	<meta name="twitter:description" content="{{ replaceRE "\n" "" (.Description | default .Summary) }}">
+
+	{{ if $.Page.IsTranslated }}
+		{{ range $.Page.Translations }}
+			<meta property="og:locale:alternate" content="{{ i18n ( printf  "%sLocaleCode" .Lang ) }}"/>
+			<link rel="alternate" hreflang="{{ .Lang }}" href="{{ .Permalink }}" />
+	    {{ end}}
+	{{ end }}
+{{ else }}
+	<!-- Homepage specific properties -->
+	<meta property="og:title" content="{{ .Site.Title }}">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="{{ substr .Site.BaseURL 0 -1 }}{{ .Site.LanguagePrefix }}/">
+	<link rel="canonical" href="{{ substr .Site.BaseURL 0 -1 }}{{ .Site.LanguagePrefix }}/">
+
+	<meta name="twitter:url" content="{{ substr .Site.BaseURL 0 -1 }}{{ .Site.LanguagePrefix }}/">
+	<meta name="twitter:title" content="{{ .Site.Title }}">
+
+	{{ if $.Page.IsTranslated }}
+		{{ range $.Page.Translations }}
+			<meta property="og:locale:alternate" content="{{ i18n ( printf  "%sLocaleCode" .Lang ) }}"/>
+			<link rel="alternate" hreflang="{{ .Lang }}" href="{{ .Site.BaseURL }}{{ .Lang }}" />
+	    {{ end}}
+	{{ end }}
+{{ end }}
+
+
 {{ if .RSSLink }}
   <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
   <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
-{{ end }}
-
-<link rel="canonical" href="{{ .Permalink }}">
-
-<meta property="og:locale" content="{{ i18n "facebookLocaleCode" }}">
-{{ if $.Page.IsTranslated }}
-	{{ range $.Page.Translations }}
-		<meta property="og:locale:alternate" content="{{ i18n ( printf  "%sLocaleCode" .Lang ) }}"/>
-
-
-      {{ if ne .Title $.Site.Title }}
-		<link rel="alternate" hreflang="{{ .Lang }}" href="{{ .Permalink }}" />
-	  {{ else }}
-		<link rel="alternate" hreflang="{{ .Lang }}" href="{{ .Site.BaseURL }}{{ .Lang }}" />
-	  {{ end }}
-    {{ end}}
 {{ end }}
