Improvements to try to be AMP complient

--- a/themes/hugo_robust/layouts/partials/sidebar.amp.html
+++ b/themes/hugo_robust/layouts/partials/sidebar.amp.html
@@ -9,15 +9,19 @@
           <input type="email" class="email" placeholder="{{ i18n "email" }}" title="{{ i18n "emailHelp" }}" required>
           <input type="submit" class="submit" value="{{ i18n "register" }}">
         </form>
-        <div class="spinner" hidden="true">
+        <div class="spinner" hidden>
           <div class="bounce1"></div>
           <div class="bounce2"></div>
           <div class="bounce3"></div>
         </div>
-        <div class="success" hidden="true">
+        <div class="success" hidden>
           <p>{{ i18n "subscribeNewsletterSuccess" }}</p>
         </div>
       </div>
+    </section>
+
+    <section class="sidebar">
+      {{ partial "social-media.amp.html" }}
     </section>
 
     <section class="sidebar">
@@ -29,10 +33,6 @@
           {{ end }}
         </div>
       </div>
-    </section>
-
-    <section class="sidebar">
-      {{ partial "social-media.html" }}
     </section>
 
     {{ if .IsTranslated }}
